# smart-bugger

./: .gitignore  .gitmodules  CMakeLists.txt
include/: debugger.hpp
src/: smart_dbg.cpp
